Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99296

Crash when recording audio-only after video recording

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.2.3, 6.3.0 Alpha
    • 6.2.2
    • Multimedia
    • None
    • macOS
    • 4bae921b03 (qt/qtmultimedia/dev) af3a6af279 (qt/qtmultimedia/6.2) 76149a93cf (qt/qtmultimedia/6.3)

      To reproduce: 

      1) Start recorder example

      2) Switch camera on

      3) Start recording

      4) Stop recording

      5) Switch camera off

      6) Start recording

      App crashes.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dorisverria Doris Verria
            dorisverria Doris Verria
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: